Prepare Audio lib

--- a/Sources/HodEngine/Application/CMakeLists.txt
+++ b/Sources/HodEngine/Application/CMakeLists.txt
@@ -15,7 +15,7 @@ assign_source_group(${Srcs}) # for VS
 add_library(Application ${LIB_TYPE} ${Srcs} ${Includes})
 set_property(TARGET Application PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
-add_dependencies(Application Core Window Renderer Editor Input Physics)
+add_dependencies(Application Core Audio Window Renderer Editor Input Physics)
 get_target_property(Core_INCLUDES Core INCLUDE_DIRECTORIES)
 get_target_property(Window_INCLUDES Window INCLUDE_DIRECTORIES)
 get_target_property(Renderer_INCLUDES Renderer INCLUDE_DIRECTORIES)
@@ -29,6 +29,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}
 
 target_link_libraries(Application
 	Core
+	Audio
 	Window
 	Renderer
 	Editor
