--- a/Sources/HodEngine/Game/CMakeLists.txt
+++ b/Sources/HodEngine/Game/CMakeLists.txt
@@ -14,6 +14,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 add_library(Game ${LIB_TYPE} ${Srcs} ${Includes})
+target_precompile_headers(Game PRIVATE "Pch.hpp")
 set_property(TARGET Game PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
 target_compile_definitions(Game PUBLIC ${PLATFORM_DEFINE} ${RENDERER_DEFINE})
