Editor : add pch

--- a/Sources/HodEngine/Editor/CMakeLists.txt
+++ b/Sources/HodEngine/Editor/CMakeLists.txt
@@ -58,6 +58,7 @@ find_package(Stb REQUIRED)
 find_package(PortableFileDialog REQUIRED)
 
 add_library(Editor ${LIB_TYPE} ${Srcs} ${Includes})
+target_precompile_headers(Editor PRIVATE "Pch.hpp")
 set_property(TARGET Editor PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
 add_dependencies(Editor Core ImGui Window Physics Renderer Game)
