HodApplication and HodEditor (executable split)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -55,12 +55,26 @@
 			]
 		},
 		{
-			"name": "(Windows) Launch",
+			"name": "(Windows) Editor",
 			"type": "cppvsdbg",
 			"request": "launch",
 			//"program": "${workspaceFolder}/bazel-bin/Sources/EditorApplication/HodEditor.exe",
-			"program": "${command:cmake.launchTargetPath}",
+			"program": "${command:cmake.launchTargetDirectory}/HodEditor.exe",
 			"args": ["--ProjectPath", "E:/Pong/Pong.hod"],
+			"stopAtEntry": false,
+			//"cwd": "E:/Pong/Pong.hod",
+			"environment": [],
+			"console": "integratedTerminal",
+			//"preLaunchTask": "Build HodEditor",
+			"preLaunchTask": "Build target",
+		},
+		{
+			"name": "(Windows) Game",
+			"type": "cppvsdbg",
+			"request": "launch",
+			//"program": "${workspaceFolder}/bazel-bin/Sources/EditorApplication/HodEditor.exe",
+			"program": "${command:cmake.launchTargetDirectory}/HodApplication.exe",
+			"args": ["--BuildPath", "E:/Pong/Builds/Latest"],
 			"stopAtEntry": false,
 			//"cwd": "E:/Pong/Pong.hod",
 			"environment": [],
@@ -73,7 +87,7 @@
 			"type": "cppvsdbg",
 			"request": "launch",
 			//"program": "${workspaceFolder}/bazel-bin/Sources/EditorApplication/HodEditor.exe",
-			"program": "${command:cmake.launchTargetPath}",
+			"program": "${command:cmake.launchTargetDirectory}/HodShaderConverter.exe",
 			"args": ["--input", "${workspaceFolder}\\Sources\\HodEngine\\ImGui\\Shader\\Sources", "--output", "${workspaceFolder}/Sources/HodEngine/ImGui/Shader/Generated"],
 			"stopAtEntry": false,
 			//"cwd": "${workspaceFolder}/Data",
