--- a/Sources/HodEngine/ImGui/CMakeLists.txt
+++ b/Sources/HodEngine/ImGui/CMakeLists.txt
@@ -11,27 +11,33 @@ endif()
 
 CollectSourceFiles(${PROJECT_SOURCE_DIR} Srcs Includes)
 
+function(EmbeedShaderSource InputFile TemplateFile OutputDir OutputFile)
+  message(STATUS "Pack Shader: ${InputFile}")
+
+  get_filename_component(FILENAME "${InputFile}" NAME)
+  string(REPLACE "." "_" ESCAPED_FILE_NAME "${FILENAME}")
+
+  file(READ "${InputFile}" FILE_CONTENTS)
+  string(REPLACE "\"" "\\\"" ESCAPED_FILE_CONTENTS "${FILE_CONTENTS}")
+  string(REPLACE "\n" "\\n\"\n\"" ESCAPED_FILE_CONTENTS "${ESCAPED_FILE_CONTENTS}")
+
+  configure_file(
+      ${TemplateFile}
+      ${OutputDir}/${FILENAME}.hpp
+      @ONLY
+  )
+endfunction()
+
 file(GLOB_RECURSE ShaderSources
 	"${PROJECT_SOURCE_DIR}/Shader/Sources/*.vert"
 	"${PROJECT_SOURCE_DIR}/Shader/Sources/*.frag"
 )
 
-set(ShaderGenerated "")
 foreach(file ${ShaderSources})
-	string(REPLACE "${PROJECT_SOURCE_DIR}/Shader/Sources/" "${PROJECT_SOURCE_DIR}/Shader/Generated/" relocated_file "${file}")
-    list(APPEND ShaderGenerated "${relocated_file}.cpp")
-    list(APPEND ShaderGenerated "${relocated_file}.hpp")
-	list(APPEND Srcs "${relocated_file}.cpp")
-	list(APPEND Srcs "${relocated_file}.hpp")
-	list(APPEND Includes "${relocated_file}.hpp")
+  EmbeedShaderSource(${file} ${PROJECT_SOURCE_DIR}/Shader/Template/ShaderSourceFileTemplate.hpp.in ${PROJECT_SOURCE_DIR}/Shader/Generated GeneratedFile)
+  list(APPEND Srcs ${GeneratedFile})
+  list(APPEND Includes ${GeneratedFile})
 endforeach()
-
-add_custom_command(OUTPUT ${ShaderGenerated}
-    COMMAND HodShaderConverter --input Shader/Sources --output Shader/Generated
-    DEPENDS HodShaderConverter ${ShaderSources}
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-    COMMENT "Generating shader source files"
-)
 
 # Creates C resources file from files in given directory
 function(create_resources input output SourcesVar IncludeVar)
