--- a/Sources/HodEngine/Application/CMakeLists.txt
+++ b/Sources/HodEngine/Application/CMakeLists.txt
@@ -39,5 +39,12 @@ target_link_libraries(Application
 	ImGui
 )
 
+if (ANDROID)
+find_library(android-lib android)
+target_link_libraries(Application ${android-lib} log)
+target_include_directories(Application PRIVATE ${CMAKE_SOURCE_DIR}/Externals/agdk-libraries-2023.3.0.0/include)
+target_link_libraries(Application ${CMAKE_SOURCE_DIR}/Externals/agdk-libraries-2023.3.0.0/libs/${ANDROID_ABI}_cpp_static_Release/libgame-activity_static.a)
+endif()
+
 target_compile_definitions(Application PUBLIC ${PLATFORM_DEFINE} ${RENDERER_DEFINE})
 target_compile_definitions(Application PRIVATE HOD_APPLICATION_EXPORT)
