--- a/Sources/HodApplication/CMakeLists.txt
+++ b/Sources/HodApplication/CMakeLists.txt
@@ -28,6 +28,11 @@ if (APPLE)
 	target_include_directories(HodApplication PRIVATE ${PROJECT_SOURCE_DIR})
 elseif(ANDROID)
 	add_library(HodApplication ${Srcs} ${Includes})
+	find_library(android-lib android)
+	target_link_libraries(HodApplication ${android-lib} log)
+	target_include_directories(HodApplication PRIVATE ${CMAKE_SOURCE_DIR}/Externals/agdk-libraries-2023.3.0.0/include)
+	target_link_libraries(HodApplication ${CMAKE_SOURCE_DIR}/Externals/agdk-libraries-2023.3.0.0/libs/${ANDROID_ABI}_cpp_static_Release/libgame-activity_static.a)
+	target_link_libraries(HodApplication ${CMAKE_SOURCE_DIR}/Externals/agdk-libraries-2023.3.0.0/libs/${ANDROID_ABI}_cpp_static_Release/libgame-text-input_static.a)
 else()
 	add_executable(HodApplication ${Srcs} ${Includes})
 		
