--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,9 @@
-
-bazel-*
 build_*/
-build
-build_xcode
+build/
 
 Generated
-
-*.spirv
-
 WaylandGenerated
 
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
-*.spirv
-
-x64/
 .vs/
-obj/
-bin/
-
-!Data/**/*.obj
 .vscode/settings.json
-
 .DS_Store
