Linux: Fix cmake issues

--- a/Sources/HodEngine/Window/CMakeLists.txt
+++ b/Sources/HodEngine/Window/CMakeLists.txt
@@ -71,7 +71,7 @@ if(ANDROID)
 endif()
 
 add_dependencies(Window Core)
-target_precompile_headers(Window PRIVATE "Pch.hpp")
+target_precompile_headers(Window PRIVATE $<$<COMPILE_LANGUAGE:CXX>:Pch.hpp>)
 get_target_property(Core_INCLUDES Core INCLUDE_DIRECTORIES)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}
