Linux: add missing implementation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,56 +33,36 @@
 			"name": "(Unix) Editor",
 			"type": "lldb",
 			"request": "launch",
-			//"program": "${workspaceFolder}/bazel-bin/Sources/EditorApplication/HodEditor.exe",
 			"program": "${command:cmake.launchTargetDirectory}/HodEditor",
-			"args": ["--ProjectPath", "E:/Pong/Pong.hod"],
+			//"args": ["--ProjectPath", "E:/Pong/Pong.hod"],
 			"stopAtEntry": false,
 			//"cwd": "E:/Pong/Pong.hod",
 			"environment": [],
 			"console": "integratedTerminal",
-			//"preLaunchTask": "Build HodEditor",
 			"preLaunchTask": "Build target",
 		},
 		{
 			"name": "(Windows) Editor",
 			"type": "cppvsdbg",
 			"request": "launch",
-			//"program": "${workspaceFolder}/bazel-bin/Sources/EditorApplication/HodEditor.exe",
 			"program": "${command:cmake.launchTargetDirectory}/HodEditor.exe",
 			"args": ["--ProjectPath", "E:/Pong/Pong.hod"],
 			"stopAtEntry": false,
 			//"cwd": "E:/Pong/Pong.hod",
 			"environment": [],
 			"console": "integratedTerminal",
-			//"preLaunchTask": "Build HodEditor",
 			"preLaunchTask": "Build target",
 		},
 		{
 			"name": "(Windows) Game",
 			"type": "cppvsdbg",
 			"request": "launch",
-			//"program": "${workspaceFolder}/bazel-bin/Sources/EditorApplication/HodEditor.exe",
 			"program": "${command:cmake.launchTargetDirectory}/HodApplication.exe",
 			"args": ["--BuildPath", "E:/Pong/Builds/Latest"],
 			"stopAtEntry": false,
 			//"cwd": "E:/Pong/Pong.hod",
 			"environment": [],
 			"console": "integratedTerminal",
-			//"preLaunchTask": "Build HodEditor",
-			"preLaunchTask": "Build target",
-		},
-		{
-			"name": "(Windows) Shader Converter",
-			"type": "cppvsdbg",
-			"request": "launch",
-			//"program": "${workspaceFolder}/bazel-bin/Sources/EditorApplication/HodEditor.exe",
-			"program": "${command:cmake.launchTargetDirectory}/HodShaderConverter.exe",
-			"args": ["--input", "${workspaceFolder}\\Sources\\HodEngine\\ImGui\\Shader\\Sources", "--output", "${workspaceFolder}/Sources/HodEngine/ImGui/Shader/Generated"],
-			"stopAtEntry": false,
-			//"cwd": "${workspaceFolder}/Data",
-			"environment": [],
-			"console": "integratedTerminal",
-			//"preLaunchTask": "Build HodEditor",
 			"preLaunchTask": "Build target",
 		}
 	]
