Android: Disable Avx on Box2d (crash)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ ExternalProject_Add(box2d
     -DBOX2D_SAMPLES=OFF
     -DBOX2D_VALIDATE=OFF
     -DBOX2D_UNIT_TESTS=OFF
+    -DBOX2D_AVX2=OFF # TODO crash on Android
     -DCMAKE_POSITION_INDEPENDENT_CODE=ON
     -DCMAKE_OSX_DEPLOYMENT_TARGET=14 #TODO only on MacOs platform
     -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
