--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "Build target",
+			"label": "Build Target",
 			"type": "cmake",
 			"command": "build",
 			"group": "build"
