--- a/Sources/HodEngine/Editor/CMakeLists.txt
+++ b/Sources/HodEngine/Editor/CMakeLists.txt
@@ -52,6 +52,16 @@ list(APPEND Srcs ${IconSrcs})
 list(APPEND Srcs ${IconIncludes})
 list(APPEND Includes ${IconIncludes})
 
+create_resources("Icons/Shader.png" "Icons" IconSrcs IconIncludes)
+list(APPEND Srcs ${IconSrcs})
+list(APPEND Srcs ${IconIncludes})
+list(APPEND Includes ${IconIncludes})
+
+create_resources("Icons/Material.png" "Icons" IconSrcs IconIncludes)
+list(APPEND Srcs ${IconSrcs})
+list(APPEND Srcs ${IconIncludes})
+list(APPEND Includes ${IconIncludes})
+
 EmbeedTextInSource("FileTemplate/CMakeLists.txt" ${PROJECT_SOURCE_DIR}/FileTemplate/EditorTemplate.hpp.in ${PROJECT_SOURCE_DIR}/FileTemplate/Generated GeneratedFile)
 list(APPEND Srcs ${GeneratedFile})
 list(APPEND Includes ${GeneratedFile})
